refactor(slr-engine-biz): test环境脚本添加gc日志、定时器采用内存